<resources>
    <string name="app_name">Where Office</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="plate1">อุดมสุข</string>
    <string name="plate2">บางนา</string>
    <string name="plate3">บางพลี</string>
    <string name="plate4">ฉันอยู่ที่นี่</string>
    <string name="lat">ละติจูด</string>
    <string name="lng">ลองติจูด</string>
    <string name="title_activity_maps">Map</string>
    
    
</resources>
